--- a/DTLib/DTLib.csproj
+++ b/DTLib/DTLib.csproj
@@ -1,26 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net48;netstandard2.0</TargetFrameworks>
-		<LangVersion>preview</LangVersion>
+		<!--package info-->
+		<PackageId>DTLib</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Timerix</Authors>
+		<Description>Library for all my C# projects</Description>
+		<RepositoryType>GIT</RepositoryType>
+		<RepositoryUrl>https://github.com/Timerix22/DTLib</RepositoryUrl>
+		<Configuration>Release</Configuration>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<!--compilation properties-->
+		<TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
+		<!--Platforms>AnyCPU;x64;x86;arm64</Platforms-->
+		<!--Configurations>Debug;Release</Configurations-->
+		<DebugType>embedded</DebugType>
+		<!--language features-->
+		<LangVersion>10</LangVersion>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>disable</Nullable>
-		<AssemblyName>DTLib</AssemblyName>
-		<!--xxhash uses arithmetic overflow-->
 		<CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<DebugType>embedded</DebugType>
-		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
-		<Configurations>Debug;Release</Configurations>
-		<Platforms>AnyCPU;x64;x86;arm64</Platforms>
 	</PropertyGroup>
-	
+
+	<!--external dependencies-->
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
 		<Reference Include="System.Net" />
 		<Reference Include="System.Net.Http" />
 		<Reference Include="System.Dynamic" />
 		<Reference Include="Microsoft.CSharp" />
 	</ItemGroup>
-	
+
+	<!--project files-->
 	<ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
 	  	<Compile Remove="Experimental\**" />
 	</ItemGroup>
