--- a/DTLib.Dtsod/DTLib.Dtsod.csproj
+++ b/DTLib.Dtsod/DTLib.Dtsod.csproj
@@ -1,44 +1,48 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net48;netstandard2.0</TargetFrameworks>
-        <LangVersion>10</LangVersion>
-        <ImplicitUsings>disable</ImplicitUsings>
-        <Nullable>disable</Nullable>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+        <!--package info-->
+        <PackageId>DTLib.Dtsod</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Timerix</Authors>
+        <Description>Definitely not json</Description>
+        <RepositoryType>GIT</RepositoryType>
+        <RepositoryUrl>https://github.com/Timerix22/DTLib</RepositoryUrl>
+        <Configuration>Release</Configuration>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <!--compilation properties-->
+        <TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
         <DebugType>embedded</DebugType>
-        <Configurations>Debug;Release</Configurations>
-		<Platforms>AnyCPU;x64;x86;arm64</Platforms>
+        <!--language features-->
+        <LangVersion>10</LangVersion>
+        <Nullable>disable</Nullable>
+        <ImplicitUsings>disable</ImplicitUsings>
     </PropertyGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\DTLib\DTLib.csproj" />
-    </ItemGroup>
+    
+    <!--external dependencies-->
     <ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
         <Reference Include="System.Dynamic" />
         <Reference Include="Microsoft.CSharp" />
     </ItemGroup>
-
     <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     </ItemGroup>
-
+    
+    <!--DTLib dependencies-->
+    <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <ProjectReference Include="..\DTLib\DTLib.csproj" />
+    </ItemGroup>
     <ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
-        <Compile Remove="V30\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Update="Dependencies\**\*">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-            <IncludeInPackage>true</IncludeInPackage>
-        </None>
-        <Compile Remove="Experimental/**/*"/>
-        <None Include="Experimental/**/*"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Experimental" />
+        <PackageReference Include="DTLib" Version="1.0.0" />
     </ItemGroup>
     
+    <!--project files-->
+    <ItemGroup>
+        <Content Include="runtimes\**\*">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <Pack>true</Pack>
+            <PackagePath>runtimes/</PackagePath>
+        </Content>
+        <Compile Remove="Experimental/**/*" />
+        <None Include="Experimental/**/*" />
+    </ItemGroup>
 </Project>
