--- a/DTLib.Logging/DTLib.Logging.csproj
+++ b/DTLib.Logging/DTLib.Logging.csproj
@@ -1,22 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net48;netstandard2.0</TargetFrameworks>
-        <LangVersion>10</LangVersion>
-        <ImplicitUsings>disable</ImplicitUsings>
-        <Nullable>disable</Nullable>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <!--package info-->
+        <PackageId>DTLib.Logging</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Timerix</Authors>
+        <Description>Loggers with dependency injection</Description>
+        <RepositoryType>GIT</RepositoryType>
+        <RepositoryUrl>https://github.com/Timerix22/DTLib</RepositoryUrl>
+        <Configuration>Release</Configuration>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <!--compilation properties-->
+        <TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
         <DebugType>embedded</DebugType>
-        <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
-        <Configurations>Debug;Release</Configurations>
-        <Platforms>AnyCPU;x64;x86;arm64</Platforms>
+        <!--language features-->
+        <LangVersion>10</LangVersion>
+        <Nullable>disable</Nullable>
+        <ImplicitUsings>disable</ImplicitUsings>
     </PropertyGroup>
 
+    <!--external dependencies-->
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\DTLib\DTLib.csproj" />
-      <ProjectReference Include="..\DTLib.Ben.Demystifier\DTLib.Ben.Demystifier.csproj" />
+
+    <!--DTLib dependencies-->
+    <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <ProjectReference Include="..\DTLib\DTLib.csproj" />
+        <ProjectReference Include="..\DTLib.Ben.Demystifier\DTLib.Ben.Demystifier.csproj" />
+    </ItemGroup>
+    <ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
+        <PackageReference Include="DTLib" Version="1.0.0"/>
+        <PackageReference Include="DTLib.Ben.Demystifier" Version="1.0.0"/>
     </ItemGroup>
 </Project>
