--- a/DTLib.Tests/DTLib.Tests.csproj
+++ b/DTLib.Tests/DTLib.Tests.csproj
@@ -28,11 +28,13 @@
 	</ItemGroup>
 	<ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
 		<PackageReference Include="DTLib.Network" Version="1.0.2" />
-		<PackageReference Include="DTLib.Logging" Version="1.0.3" />
 	</ItemGroup>
 
 	<!--project files-->
 	<ItemGroup>
 		<None Update="Dtsod\TestResources\**\*" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="DTLib.Logging" Version="1.0.5" />
 	</ItemGroup>
 </Project>
