--- a/DTLib.Dtsod/DTLib.Dtsod.csproj
+++ b/DTLib.Dtsod/DTLib.Dtsod.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <!--package info-->
         <PackageId>DTLib.Dtsod</PackageId>
-        <Version>1.1.2</Version>
+        <Version>1.1.3</Version>
         <Authors>Timerix</Authors>
         <Description>Definitely not json</Description>
         <RepositoryType>GIT</RepositoryType>
@@ -11,7 +11,7 @@
         <Configuration>Release</Configuration>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <!--compilation properties-->
-        <TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net48;net6.0;net7.0</TargetFrameworks>
         <DebugType>embedded</DebugType>
         <!--language features-->
         <LangVersion>11</LangVersion>
@@ -33,7 +33,7 @@
         <ProjectReference Include="..\DTLib\DTLib.csproj" />
     </ItemGroup>
     <ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
-        <PackageReference Include="DTLib" Version="1.1.3" />
+        <PackageReference Include="DTLib" Version="1.1.4" />
     </ItemGroup>
     
     <!--project files-->
