--- a/DTLib.Logging/DTLib.Logging.csproj
+++ b/DTLib.Logging/DTLib.Logging.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <!--package info-->
         <PackageId>DTLib.Logging</PackageId>
-        <Version>1.1.2</Version>
+        <Version>1.1.3</Version>
         <Authors>Timerix</Authors>
         <Description>Loggers with dependency injection</Description>
         <RepositoryType>GIT</RepositoryType>
@@ -11,7 +11,7 @@
         <Configuration>Release</Configuration>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <!--compilation properties-->
-        <TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net48;net6.0;net7.0</TargetFrameworks>
         <DebugType>embedded</DebugType>
         <!--language features-->
         <LangVersion>10</LangVersion>
@@ -30,7 +30,7 @@
         <ProjectReference Include="..\DTLib.Ben.Demystifier\DTLib.Ben.Demystifier.csproj" />
     </ItemGroup>
     <ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
-        <PackageReference Include="DTLib" Version="1.1.3" />
-        <PackageReference Include="DTLib.Ben.Demystifier" Version="1.0.2" />
+        <PackageReference Include="DTLib" Version="1.1.4" />
+        <PackageReference Include="DTLib.Ben.Demystifier" Version="1.0.3" />
     </ItemGroup>
 </Project>
