--- a/DTLib.Tests/DTLib.Tests.csproj
+++ b/DTLib.Tests/DTLib.Tests.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<!--compilation properties-->
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net48;net6.0;net7.0</TargetFrameworks>
 		<DebugType>embedded</DebugType>
 		<!--language features-->
 		<LangVersion>10</LangVersion>
@@ -27,10 +27,10 @@
 		<ProjectReference Include="..\DTLib\DTLib.csproj" />
 	</ItemGroup>
 	<ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
-		<PackageReference Include="DTLib" Version="1.1.3" />
-		<PackageReference Include="DTLib.Dtsod" Version="1.1.2" />
-		<PackageReference Include="DTLib.Network" Version="1.1.2" />
-		<PackageReference Include="DTLib.Logging" Version="1.1.2" />
+		<PackageReference Include="DTLib" Version="1.1.4" />
+		<PackageReference Include="DTLib.Dtsod" Version="1.1.3" />
+		<PackageReference Include="DTLib.Network" Version="1.1.3" />
+		<PackageReference Include="DTLib.Logging" Version="1.1.3" />
 	</ItemGroup>
 
 	<!--project files-->
