--- a/DTLib/DTLib.csproj
+++ b/DTLib/DTLib.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<!--package info-->
 		<PackageId>DTLib</PackageId>
-		<Version>1.1.3</Version>
+		<Version>1.1.4</Version>
 		<Authors>Timerix</Authors>
 		<Description>Library for all my C# projects</Description>
 		<RepositoryType>GIT</RepositoryType>
@@ -11,7 +11,7 @@
 		<Configuration>Release</Configuration>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<!--compilation properties-->
-		<TargetFrameworks>net6.0;netstandard2.0;net48</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net48;net6.0;net7.0</TargetFrameworks>
 		<!--Platforms>AnyCPU;x64;x86;arm64</Platforms-->
 		<!--Configurations>Debug;Release</Configurations-->
 		<DebugType>embedded</DebugType>
